fix(ui): fix mobile page jumpping issue
fix mobile page jumpping issue

--- a/packages/ui/src/components/AppContent/index.module.scss
+++ b/packages/ui/src/components/AppContent/index.module.scss
@@ -33,6 +33,10 @@ main {
   @include mobile.fonts;
   @include mobile.layout;
 
+  main {
+    justify-content: normal;
+  }
+
   .content {
     flex: 1;
     align-self: stretch;
